<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.lastviking.android.smtool.MainActivity">
    <item
        android:id="@+id/action_transcribe_all"
        android:orderInCategory="90"
        android:title="@string/transcribe_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_all"
        android:orderInCategory="95"
        android:title="@string/share_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="110"
        android:title="@string/delete_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>