<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/check_transcribe_immediately"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_transcribe_immediately" />

    <CheckBox
        android:id="@+id/check_keep_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_keep_audio" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pref_language" />

    <Spinner
        android:id="@+id/spinner_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pref_title_words" />

    <EditText
        android:id="@+id/edit_title_word_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="6" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pref_whisper_prompt" />

    <EditText
        android:id="@+id/edit_whisper_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pref_whisper_prompt_hint"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:gravity="top" />

</LinearLayout>
